--- a/index.html
+++ b/index.html
@@ -43,9 +43,14 @@
 
     <main class="container">
         <section id="featured" class="grid grid-flow-col gap-16">
-            <div>
+            <figure class="card"> <!--figure para colocar conteudo em cima da imagem-->
                 <img src="assets/images/Image 01.jpg" alt="">
-            </div>
+
+                <figcaption> 
+                    <span class="content-tag">Robótica</span>
+                    <h2 class="text-lg">Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.</h2>
+                </figcaption>
+            </figure>
 
             <div class="grid grid-cols-2 gap-16">
                 <div>
