--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 <body>
     <header class="container">
         <nav id="primary" class="grid grid-flow-col">
-            <div>
+            <figure>
                 <img src="assets/icons/menu.svg" alt="logo menu">
                 <strong>Menu</strong>
-            </div>
+            </figure>
             
-            <div>
+            <figure>
                 <img src="assets/images/Logo.png" alt="logo principal">
-            </div>
+            </figure>
 
-            <div>
+            <figure>
                 <strong>Buscar</strong>
                 <img src="assets/icons/lupa.svg" alt="lupa de pesquisa">
-            </div>
+            </figure>
 
         </nav>
         <nav id="secondary" class="grid grid-flow-col">
@@ -53,21 +53,41 @@
             </figure>
 
             <div class="grid grid-cols-2 gap-16">
-                <div>
+                <figure class="card">
                     <img src="assets/images/Image 02.jpg" alt="">
-                </div>
 
-                <div>
+                    <figcaption> 
+                    <span class="content-tag">Hologramas</span>
+                    <h2 class="text-lg">Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas telas!</h2>
+                </figcaption>
+                </figure>
+
+                <figure class="card">
                     <img src="assets/images/Image 03.jpg" alt="">
-                </div>
 
-                <div>
+                    <figcaption> 
+                    <span class="content-tag">Internet</span>
+                    <h2 class="text-lg">Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como vivemos e nos comuni...</h2>
+                </figcaption>
+                </figure>
+
+                <figure class="card">
                     <img src="assets/images/Image 04.jpg" alt="">
-                </div>
 
-                <div>
+                    <figcaption> 
+                    <span class="content-tag">Vestíveis</span>
+                    <h2 class="text-lg">Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo insights valiosos para o...</h2>
+                </figcaption>
+                </figure>
+
+                <figure class="card">
                     <img src="assets/images/Image 05.jpg" alt="">
-                </div>
+
+                    <figcaption> 
+                    <span class="content-tag">Realidade Virtual</span>
+                    <h2 class="text-lg">Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a aprendizagem trad...</h2>
+                </figcaption>
+                </figure>
             </div>
         </section>
 
